# VirtualRecursiveNetwork

./: .gitignore  README.md  REFACTORING_SUMMARY.md  WANDB_SWEEP_README.md  main.py  pretrain.py  pretrain_sweep_wrapper.py  pyproject.toml  run_sweep.py
config/: cfg_pretrain.yaml
config/arch/: loop_transformer-3stage.yaml  loop_transformer.yaml  loop_transformer_baseline.yaml  loop_transformer_conv.yaml  loop_transformer_dis.yaml  loop_transformer_dis_3s.yaml  loop_transformer_dis_loss.yaml  loop_transformer_metric.yaml  trm.yaml  trm_dis.yaml  varc_loop_vit.yaml  varc_metric_vit.yaml  varc_vit.yaml  varc_vit_standard.yaml
config/wandb/: sweep_stages.yaml  sweep_stages_bayes.yaml  sweep_stages_random.yaml
evaluators/: arc.py
fig/loop_transfomer/: generate_svg.py
models/: layers.py  losses.py
models/embed/: __init__.py  patch.py  sparse.py
models/looper/: MIGRATION.md  README.md  __init__.py  blocks.py  config.py  core.py  model.py
models/recursive_reasoning/: hrm.py  loop_transformer.py  transformers_baseline.py  trm.py  trm_hier6.py  trm_singlez.py
models/vision_reasoning/: __init__.py  varc_vit.py
test/: test_fabric_broadcast.py  test_fabric_distributed.py  test_fabric_reduce.py
train/: __init__.py  config.py  data.py  early_stopping.py  loops.py  schedulers.py  state.py
utils/: dis.py  metric.py
wandb/: latest-run
wandb/run-20251215_090930-nfa1yrzk/: run-nfa1yrzk.wandb
wandb/run-20251215_095540-tjfvriqv/: run-tjfvriqv.wandb
wandb/run-20251215_125114-m64yxa9p/: run-m64yxa9p.wandb
wandb/run-20251215_134740-k7fc7f99/: run-k7fc7f99.wandb
(+146 files in other folders)
